--- a/3rdYearProject/3rdYearProject.csproj
+++ b/3rdYearProject/3rdYearProject.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Other\LevelBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenes\Highscores.cs" />
     <Compile Include="Scenes\LevelOne.cs" />
     <Compile Include="Scenes\Menu.cs" />
     <Compile Include="Scenes\Scene.cs" />
@@ -78,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <Content Include="Other\BugList.txt" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\PlayerSprites\debugRec.xnb">
@@ -141,6 +143,41 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\PlayerSprites\jumping2.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\PlayerSprites\darksanicidleleft.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\PlayerSprites\darksanicidleright.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\PlayerSprites\darksanicrunningleft.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\PlayerSprites\darksanicrunningright.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\PlayerSprites\darksanicjumping.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Tiles\spike.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Tiles\spring.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
